package.json upd

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "bootswatch",
-  "description": "Bootswatch is a collection of themes for Bootstrap.",
+  "name": "aceberg-bootswatch-fork",
+  "description": "Bootswatch with additional themes",
   "version": "5.3.3",
   "author": "Thomas Park",
   "homepage": "https://bootswatch.com",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thomaspark/bootswatch.git"
+    "url": "git+https://github.com/aceberg/aceberg-bootswatch-fork"
   },
   "bugs": {
-    "url": "https://github.com/thomaspark/bootswatch/issues"
+    "url": "https://github.com/aceberg/aceberg-bootswatch-fork/issues"
   },
   "scripts": {
     "build": "grunt swatch",
