New themes: wood, grayscale

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aceberg-bootswatch-fork",
   "description": "Bootswatch with additional themes",
-  "version": "5.3.3",
+  "version": "5.3.3-2",
   "author": "Thomas Park",
   "homepage": "https://bootswatch.com",
   "license": "MIT",
